# osdag-core

./: .gitignore  IFC_Generator_Status_Report.md  README.md  environment.yml  license-dependencies.txt  pyproject.toml  requirements.txt  setup_report.md
conda-recipe/: meta.yaml
src/: custom_3dviewer.py  custom_3dviewer_changes.diff  pso.py  report.aux  run_osdag.py  save_CAD_col_endplate.py
src/osdag_core/: Common.py  cli.py
src/osdag_core/cad/: common_logic.py
src/osdag_core/cad/CompressionMembers/: WeldedCAD.py
src/osdag_core/cad/FlexuralMember/: plate_girder.py
src/osdag_core/cad/Tension/: WeldedCAD.py
src/osdag_core/cad/items/: filletweld.py
src/osdag_core/data/doc/: CONTRIBUTORS.MD
src/osdag_core/design_report/: reportGenerator_latex.py
src/osdag_core/design_type/: main.py  member.py
src/osdag_core/design_type/beam_column/: Beam_Colum_Compression.py
src/osdag_core/design_type/compression_member/: Column.py  compression.py  compression_bolted.py  compression_column.py  compression_welded.py
src/osdag_core/design_type/connection/: base_plate_connection.py  beam_beam_end_plate_splice.py  beam_column_end_plate.py  beam_cover_plate.py  beam_cover_plate_weld.py  butt_joint_bolted.py  butt_joint_welded.py  cleat_angle_connection.py  column_cover_plate.py  column_cover_plate_weld.py  column_end_plate.py  connection.py  end_plate_connection.py  (+6 more)
src/osdag_core/export_ifc/: __init__.py  cad_extraction.py  database_connector.py  geometry_mapper.py  ifc_generator.py  metadata_mapper.py  subprocess_ifc_exporter.py
src/osdag_core/utilities/: __init__.py
(+32 files in other folders)
